# core-adversary-shield

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  build_test.bat
docs/: architecture_en.md  architecture_zh.md  index.html  lua_architecture.md
examples/: protocol_example.cpp
include/: ApiRegistry.h  AuthGateway.h  CryptoCore.h  ProtocolGateway.hpp  Result.h  RuntimeEnvironmentValidator.h  SecureChannel.h  SecurityDef.h
server/: go.mod  main.go
server/db/: db_sqlite_wallet.go
server/internal/utils/: context.go  log.go
server/middleware/: oracle_signer.go  pow_verifier.go
src/: ApiRegistry.cpp  AuthGateway.cpp  CryptoCore.cpp  RuntimeEnvironmentValidator.cpp  SecureChannel.cpp
tests/: test_runner.cpp
