cmake_minimum_required(VERSION 3.15)
project(CoreSecurityClient LANGUAGES CXX)

# ============================================================================
# ЛљДЁХфжУ
# ============================================================================
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# ============================================================================
# ЭтВПвРРЕЃКOpenSSL Лђ Windows BCrypt
# ============================================================================
# БОПЊдДАцБОЪЙгУПчЦНЬЈУмТыбЇЪЕЯжЃК
# - Windows: ЪЙгУФкжУ BCrypt APIЃЈЮоашЖюЭтвРРЕЃЉ
# - Linux/macOS: ашвЊ OpenSSL 3.x
#
# ЪЙгУЗНЗЈ:
#   - Ubuntu/Debian: sudo apt-get install libssl-dev
#   - macOS: brew install openssl
#   - Windows: ЮоашЖюЭтвРРЕЃЌЪЙгУФкжУ BCrypt
# ============================================================================

option(USE_OPENSSL "Use OpenSSL instead of Windows BCrypt" OFF)

if(WIN32 AND NOT USE_OPENSSL)
    # Windows ЦНЬЈЪЙгУФкжУ BCryptЃЌЮоашЖюЭтвРРЕ
    message(STATUS "Using Windows BCrypt for cryptographic operations")
    set(CSC_CRYPTO_LIBS bcrypt)
else()
    # ЗЧ Windows ЦНЬЈЛђЧПжЦЪЙгУ OpenSSL
    set(USE_OPENSSL ON)
    find_package(OpenSSL REQUIRED)
    message(STATUS "Using OpenSSL for cryptographic operations")
    set(CSC_CRYPTO_LIBS OpenSSL::Crypto)
endif()

# ============================================================================
# дДЮФМў
# ============================================================================
set(CSC_HEADERS
    include/Result.h
    include/SecureChannel.h
    include/CryptoCore.h
    include/SecurityDef.h
    include/AuthGateway.h
    include/ApiRegistry.h
    include/ProtocolGateway.hpp
    include/RuntimeEnvironmentValidator.h
)

set(CSC_SOURCES
    src/SecureChannel.cpp
    src/CryptoCore.cpp
    src/AuthGateway.cpp
    src/ApiRegistry.cpp
    src/RuntimeEnvironmentValidator.cpp
)

# ============================================================================
# ЪОР§дДЮФМў
# ============================================================================
set(EXAMPLE_SOURCES
    examples/protocol_example.cpp
)

# ============================================================================
# БрвыФПБъЃКОВЬЌПт
# ============================================================================
add_library(csc_core STATIC ${CSC_SOURCES})

target_include_directories(csc_core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(csc_core PUBLIC
    ${CSC_CRYPTO_LIBS}
)

# Windows ЬиЖЈСДНг
if(WIN32)
    target_link_libraries(csc_core PUBLIC
        crypt32
        advapi32
    )
endif()

# БрвыбЁЯю
target_compile_options(csc_core PRIVATE
    $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic>
)

# зЂШыа­вщАцБОКХБрвыКъ
# ЩњВњЛЗОГПЩЭЈЙ§ -DCSC_PROTOCOL_VERSION="x.x.x" ИВИЧ
if(NOT DEFINED CSC_PROTOCOL_VERSION)
    set(CSC_PROTOCOL_VERSION "2.0")
endif()
target_compile_definitions(csc_core PRIVATE CSC_PROTOCOL_VERSION="${CSC_PROTOCOL_VERSION}")

# ============================================================================
# БрвыФПБъЃКЪОР§ГЬађ
# ============================================================================
add_executable(csc_example ${EXAMPLE_SOURCES})

target_link_libraries(csc_example PRIVATE
    csc_core
)

# ============================================================================
# АВзАЙцдђ
# ============================================================================
install(TARGETS csc_core
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
)

install(FILES ${CSC_HEADERS}
    DESTINATION include/csc
)